--- a/code/config.yaml
+++ b/code/config.yaml
@@ -1,10 +1,21 @@
 apiVersion: 1
 dataDisplay:
+  showVerseInTuple: true
   textFormats:
     layout-orig-rich:
       method: layoutRich
+      style: trans
     layout-orig-unicode:
       method: layoutUnicode
+      style: orig
+    text-orig-full:
+      style: source
+    text-orig-plain:
+      style: trans
+    text-orig-rich:
+      style: trans
+    text-orig-unicode:
+      style: orig
 docs:
   charText: mapping from readings to UNICODE
   charUrl: '{docBase}/programs/mapReadings.ipynb'
@@ -18,13 +29,14 @@ provenanceSpec:
   doi: 10.5281/zenodo.2579207
   org: Nino-cunei
   repo: oldbabylonian
-  version: 1.0.4
+  version: 1.0.5
   webBase: https://cdli.ucla.edu
   webHint: Show this document on CDLI
   webUrl: /search/search_results.php?SearchMode=Text&ObjectID=<1>
 typeDisplay:
   cluster:
-    children: sign
+    children:
+    - sign
     stretch: false
     label: '{type}'
   document:
@@ -35,6 +47,7 @@ typeDisplay:
     lineNumber: srcLnNum
   line:
     children:
+    - cluster
     - word
     features: remarks translation@en
     lineNumber: srcLnNum
@@ -43,6 +56,9 @@ typeDisplay:
       langalt comment remarks repeat fraction operator grapheme
   word:
     base: true
+    children:
+    - cluster
+    - sign
     label: true
     wrap: false
 writing: akk
