fixed setting affecting display of clusters

--- a/code/config.yaml
+++ b/code/config.yaml
@@ -36,6 +36,8 @@ provenanceSpec:
 typeDisplay:
   cluster:
     children:
+    - cluster
+    - word
     - sign
     stretch: false
     label: '{type}'
