--- a/code/config.yaml
+++ b/code/config.yaml
@@ -18,18 +18,18 @@ dataDisplay:
       style: orig
 docs:
   charText: mapping from readings to UNICODE
-  charUrl: '{docBase}/programs/mapReadings.ipynb'
+  charUrl: 'https://github.com/Nino-cunei/oldbabylonian/blob/master/programs/mapReadings.ipynb'
   docPage: about
-  featureBase: '{docBase}/transcription{docExt}'
+  featureBase: 'https://github.com/Nino-cunei/tfFromAtf/blob/master/docs/transcription{docExt}'
   featurePage: ''
 interfaceDefaults:
   lineNumbers: false
 provenanceSpec:
-  corpus: 'Old Babylonian Letters 1900-1600: Cuneiform tablets '
+  corpus: 'Old Babylonian Letters 1900-1600: Cuneiform tablets'
   doi: 10.5281/zenodo.2579207
   org: Nino-cunei
   repo: oldbabylonian
-  version: 1.0.5
+  version: 1.0.6
   webBase: https://cdli.ucla.edu
   webHint: Show this document on CDLI
   webUrl: '{webBase}/search/search_results.php?SearchMode=Text&ObjectID=<1>'
